#
# For references of this file, see
#   * https://packaging.python.org/en/latest/tutorials/packaging-projects/
#
[metadata]
name = iutils
version = 0.0.19
author = bqbn
author_email = bqbn@openken.com
description = A collection of my utility modules
license_file = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bqbn/iutils
project_urls =
    Bug Reports = https://github.com/bqbn/iutils/issues
    Source = https://github.com/bqbn/iutils
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Topic :: Software Development :: Build Tools
    Programming Language :: Python :: 3
keywords = devops utility utils

[options]
# The package_dir is a mapping of package names and directories.
# An empty package name represents the “root package” — the directory in
# the project that contains all Python source files for the package. In
# our case the src directory is designated the root package.
package_dir =
    = src
packages = find:
python_requires = >=3, <4

[options.packages.find]
where = src
